# sreality-scraper

./: .env  .env-sample  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/app/: app.py
scraper/: .dockerignore  Dockerfile  pyproject.toml
scraper/scraper/: items.py  pipelines.py  settings.py
scraper/scraper/spiders/: sreality_spider.py
